--- a/.github/workflows/yamdb.yaml
+++ b/.github/workflows/yamdb.yaml
@@ -58,7 +58,7 @@ jobs:
           script: |
             sudo docker pull jllllk/yamdb
             sudo docker-compose down -v
-            docker-compose up -d --build
+            sudo docker-compose up -d --build
 
   send_message:
     runs-on: ubuntu-latest
