--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
     container_name: webserver
     restart: unless-stopped
     volumes:
-      - ./nginx/:/etc/nginx/conf.d
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/code/static
     ports:
       - '80:80'
