--- a/.github/workflows/yamdb.yaml
+++ b/.github/workflows/yamdb.yaml
@@ -58,6 +58,7 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
+            sudo docker pull jllllk/yamdb:latest
             sudo docker-compose up --force-recreate --no-deps -d web
             sudo docker image prune -f
 
